syntax = "proto3";

package goproto.protoc.proto3;

option go_package = "../../pb";

message SyncMsg {
  string content = 1;
}

message LoginReq {}

message LoginRes {
  uint32 user_id = 1;
}